# abcc-example-raspberrypi

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
src/: main.c
src/abcc_adaptation/: abcc_driver_config.h  abcc_hardware_abstraction.c  abcc_hardware_abstraction_aux.h  abcc_software_port.h  abcc_types.h
src/example_application/: implemented_callback_functions.c
src/example_application/Logprint/: logprint.c  logprint.h
